--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -19,14 +19,14 @@
 
 .slide-selector {
     display: inline-block;
-    width: 6.25%;
+    width: 100%;
+    height: 100%;
     max-width: 30px;
-    height: 6.25%;
     max-height: 30px;
+    color: #FFFFFF;
     border-radius: 40px;
     font-style: none;
     text-decoration: none;
-    color: #FFFFFF;
     border: 1px solid #FFFFFF;
     user-select: none;
     cursor: pointer;
@@ -57,24 +57,20 @@
 }
 
 .tooltip {
-    visibility: hidden;
-    opacity: 0;
-    width: 100%;
-    max-width: 120px;
+    display: none;
     background-color: black;
     color: #FFFFFF;
-    text-align: center;
-    border-radius: 6px;
     font-size: 0.5em;
-    padding: 5px 0;
     position: absolute;
-    z-index: 1;
-    bottom: 150%;
-    left: 50%;
-    margin-left: -60px;
-    transform: translateY(20px);
+
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 10%;
+
     transition-delay: 0.25s;
     transition: visibility 0s, opacity 0.25s, transform 0.1s ease-in-out;
+
+    white-space: nowrap;
   }
   
 .tooltip::after {
@@ -88,9 +84,12 @@
     border-color: black transparent transparent transparent;
   }
 
-.slide-selector:hover .tooltip {
-    visibility: visible;
+.slide-selector:hover > .tooltip {
+    display: inline-block;
+    top: -135%;
+    left: 50%;
+    transform: translateX(-50%);
     opacity: 0.8;
-    transform: translateY(0px);
+    text-align: center;
     
 }
